--- a/slides/diagram.tex
+++ b/slides/diagram.tex
@@ -164,7 +164,7 @@
 
 \begin{frame}{LLM Model Timeline (2000--2024)}
   \centering
-  \colorlet{colDec}{AMU_acc1!75!AMU_dk2}
+  \colorlet{colDec}{AMU_acc1!50}
   \colorlet{colEnc}{AMU_acc5}
   \colorlet{colED}{AMU_lt2!65!AMU_acc5}
   \colorlet{colNon}{AMU_acc4!85!AMU_lt1}
@@ -250,14 +250,16 @@
   \end{tikzpicture}
 \end{frame}
 
-\begin{frame}{Whitespace Tokenization}
-  \centering
-  \WhitespaceTokenDiagram
-\end{frame}
+
 
 \begin{frame}{LLM Capabilities}
   \centering
   \resizebox{!}{0.55\textheight}{\LLMPipelineDiagram}
+\end{frame}
+
+\begin{frame}{Bagg of words - Whitespace Tokenization}
+  \centering
+  \WhitespaceTokenDiagram
 \end{frame}
 
 \end{document}
