--- a/slides/diagram.tex
+++ b/slides/diagram.tex
@@ -44,6 +44,7 @@
 \tikzset{token/word/.style={draw=AMU_dk1, rounded corners=6pt, font=\small\bfseries, inner xsep=10pt, inner ysep=7pt, align=center}}
 \tikzset{token/wordA/.style={token/word, fill=tokenWordBgA}}
 \tikzset{token/wordB/.style={token/word, fill=tokenWordBgB}}
+\tikzset{token/bit/.style={token/word, fill=AMU_dk2!50}}
 \tikzset{token/vocabWord/.style={token/word, fill=tokenVocabBg}}
 \tikzset{token/vocabLabel/.style={font=\small\bfseries, text=AMU_dk1}}
 \tikzset{token/span/.style={<->, line width=1pt, draw=tokenConnector, densely dashed}}
@@ -75,6 +76,43 @@
       \node[#3, right=0.12cm of #2-\prev] (#2-\i) {\strut \word};
     \fi
   }%
+}
+
+
+
+\newcommand{\LLMPipelineDiagram}{%
+  \begin{tikzpicture}[font=\small, node distance=1.3cm and 2.2cm]
+    \node[align=center, font=\bfseries] (inputlabel) {\large Text input\\{\normalsize\color{llmGray} Unstructured data}};
+    \node[llm/input, below=0.4cm of inputlabel] (inputbox) {};
+
+    \llmParagraph{($(inputbox.west)+(0.55cm,0)$)}{6pt}{0.45/4.8cm,0/4.5cm,-0.45/4.2cm}{llmInputAccent}
+
+    \node[llm/core, below=1.5cm of inputbox] (core) {\textcolor{llmCoreTitle}{\bfseries Language AI}\\{\normalsize\color{llmGray} Processes the input text}};
+
+    \draw[llm/arrow] (inputbox.south) -- (core.north);
+
+    \coordinate (split) at ($(core.south)+(0,-0.6cm)$);
+    \draw[llm/arrow] (core.south) -- (split);
+
+    \node[llm/output, below left=2.9cm and 2.2cm of core] (textout) {};
+    \node[llm/outputEmbedding, below=2.9cm of core] (embeddings) {};
+    \node[llm/output, below right=2.9cm and 2.2cm of core] (classify) {};
+
+    \node[align=center, font=\bfseries] at ($(textout.south)+(0,-1.0cm)$) {Text output\\{\normalsize\color{llmGray} Generative modeling}};
+    \node[align=center, font=\bfseries] at ($(embeddings.south)+(0,-1.0cm)$) {Embeddings\\{\normalsize\color{llmGray} Numeric values}};
+    \node[align=center, font=\bfseries] at ($(classify.south)+(0,-1.0cm)$) {Classification\\{\normalsize\color{llmGray} Identify targets}};
+
+    \draw[llm/arrow] (split) -| (textout.north);
+    \draw[llm/arrow] (split) -- (embeddings.north);
+    \draw[llm/arrow] (split) -| (classify.north);
+
+    \llmParagraph{($(textout.west)+(0.4cm,0.4cm)$)}{5pt}{0.3/2.2cm,-0.3/2.2cm,-0.9/2.2cm}{llmTextAccent}
+
+    \llmEmbeddingBlocks{($(embeddings.west)+(0.35cm,0)$)}{black}{llmEmbedD, llmEmbedA,llmEmbedB,llmEmbedC}
+
+    \llmParagraph{($(classify.west)+(0.4cm,0.4cm)$)}{5pt}{0/2.4cm}{llmTextAccent}
+    \llmParagraph{($(classify.west)+(0.4cm,-0.12cm)$)}{5pt}{0/2.1cm,-0.6/2.2cm}{llmGrayLight}
+  \end{tikzpicture}%
 }
 
 \newcommand{\WhitespaceTokenDiagram}{%
@@ -113,38 +151,31 @@
   \end{tikzpicture}%
 }
 
-\newcommand{\LLMPipelineDiagram}{%
-  \begin{tikzpicture}[font=\small, node distance=1.3cm and 2.2cm]
-    \node[align=center, font=\bfseries] (inputlabel) {\large Text input\\{\normalsize\color{llmGray} Unstructured data}};
-    \node[llm/input, below=0.4cm of inputlabel] (inputbox) {};
+\newcommand{\VectorRepDiagram}{%
+  \begin{tikzpicture}[font=\small, node distance=0.35cm and 3.4cm]
 
-    \llmParagraph{($(inputbox.west)+(0.55cm,0)$)}{6pt}{0.45/4.8cm,0/4.5cm,-0.45/4.2cm}{llmInputAccent}
+    
+    
+    \coordinate (splitA) at ($(sentenceA.south)+(0,-0.45cm)$);
 
-    \node[llm/core, below=1.5cm of inputbox] (core) {\textcolor{llmCoreTitle}{\bfseries Language AI}\\{\normalsize\color{llmGray} Processes the input text}};
+   
+    \coordinate (splitMid) at ($(splitA)!0.5!(splitB)$);
+    
+    \coordinate (rowAstart) at ($(splitA)+(-2.4cm,-1.05cm)$);
+    \coordinate (rowBstart) at ($(splitB)+(-0.4cm,-1.05cm)$);
 
-    \draw[llm/arrow] (inputbox.south) -- (core.north);
+    \TokenWordRow{(rowAstart)}{wordA}{token/wordA}{This,is,a,smart,robot}
+    
 
-    \coordinate (split) at ($(core.south)+(0,-0.6cm)$);
-    \draw[llm/arrow] (core.south) -- (split);
-
-    \node[llm/output, below left=2.9cm and 2.2cm of core] (textout) {};
-    \node[llm/outputEmbedding, below=2.9cm of core] (embeddings) {};
-    \node[llm/output, below right=2.9cm and 2.2cm of core] (classify) {};
-
-    \node[align=center, font=\bfseries] at ($(textout.south)+(0,-1.0cm)$) {Text output\\{\normalsize\color{llmGray} Generative modeling}};
-    \node[align=center, font=\bfseries] at ($(embeddings.south)+(0,-1.0cm)$) {Embeddings\\{\normalsize\color{llmGray} Numeric values}};
-    \node[align=center, font=\bfseries] at ($(classify.south)+(0,-1.0cm)$) {Classification\\{\normalsize\color{llmGray} Identify targets}};
-
-    \draw[llm/arrow] (split) -| (textout.north);
-    \draw[llm/arrow] (split) -- (embeddings.north);
-    \draw[llm/arrow] (split) -| (classify.north);
-
-    \llmParagraph{($(textout.west)+(0.4cm,0.4cm)$)}{5pt}{0.3/2.2cm,-0.3/2.2cm,-0.9/2.2cm}{llmTextAccent}
-
-    \llmEmbeddingBlocks{($(embeddings.west)+(0.35cm,0)$)}{black}{llmEmbedD, llmEmbedA,llmEmbedB,llmEmbedC}
-
-    \llmParagraph{($(classify.west)+(0.4cm,0.4cm)$)}{5pt}{0/2.4cm}{llmTextAccent}
-    \llmParagraph{($(classify.west)+(0.4cm,-0.12cm)$)}{5pt}{0/2.1cm,-0.6/2.2cm}{llmGrayLight}
+    \coordinate (vocabStart) at ($(wordA-1)+(0,-2.35cm)$);
+    \TokenWordRow{(vocabStart)}{vocab}{token/vocabWord}{This,is,a,smart,robot,My,drone}
+     \node[token/bit, below=0.4cm of vocab-1] (bit1) {1};
+    \node[token/bit, below=0.4cm of vocab-2] (bit2) {1};
+    \node[token/bit, below=0.4cm of vocab-3] (bit3) {1};
+    \node[token/bit, below=0.4cm of vocab-4] (bit4) {1};
+    \node[token/bit, below=0.4cm of vocab-5] (bit5) {1};
+    \node[token/bit, below=0.4cm of vocab-6] (bit6) {0};
+    \node[token/bit, below=0.4cm of vocab-7] (bit7) {0};
   \end{tikzpicture}%
 }
 
@@ -254,12 +285,23 @@
 
 \begin{frame}{LLM Capabilities}
   \centering
-  \resizebox{!}{0.55\textheight}{\LLMPipelineDiagram}
+  \resizebox{!}{0.75\textheight}{\LLMPipelineDiagram}
 \end{frame}
 
 \begin{frame}{Bagg of words - Whitespace Tokenization}
   \centering
   \WhitespaceTokenDiagram
+  
 \end{frame}
+
+\begin{frame}{Vector representation}
+  \begin{center}
+    \VectorRepDiagram
+  \end{center}
+  
+
+  Bag of words is created counting the number of occurrences of each word in the vocabulary.
+\end{frame}
+
 
 \end{document}
