--- a/slides/diagram.tex
+++ b/slides/diagram.tex
@@ -11,7 +11,7 @@
 % TikZ styles for reusable LLM flow elements
 \colorlet{llmInputBg}{AMU_acc5!35!AMU_lt1}
 \colorlet{llmCoreBg}{AMU_dk2!15!AMU_lt1}
-\colorlet{llmOutputBg}{AMU_lt2!30!AMU_lt1}
+\colorlet{llmOutputBg}{AMU_lt2!70!AMU_lt1}
 \colorlet{llmInputAccent}{AMU_acc6}
 \colorlet{llmTextAccent}{AMU_dk2}
 \colorlet{llmEmbedA}{AMU_acc5}
@@ -164,101 +164,7 @@
   \end{tikzpicture}%
 }
 
-\newcommand{\WhitespaceTokenDiagram}{%
-  \begin{tikzpicture}[font=\small, node distance=0.35cm and 3.4cm]
-    \node[token/sentenceLabel] (labelA) {Input};
-    \node[token/sentence, below=0.28cm of labelA] (sentenceA) {This is a smart robot};
 
-    \node[token/sentenceLabel, right=4.6cm of labelA] (labelB) {Input};
-    \node[token/sentence, below=0.28cm of labelB] (sentenceB) {My drone is smart};
-
-    \coordinate (splitA) at ($(sentenceA.south)+(0,-0.45cm)$);
-    \coordinate (splitB) at ($(sentenceB.south)+(0,-0.45cm)$);
-
-    \draw[token/arrow] (sentenceA.south) -- (splitA);
-    \draw[token/arrow] (sentenceB.south) -- (splitB);
-
-    \coordinate (splitMid) at ($(splitA)!0.5!(splitB)$);
-    \node[token/annotation] (splitLabel) at ($(splitMid)+(0,-0.3cm)$) {Split input by a \textbf{whitespace}};
-
-    \coordinate (rowAstart) at ($(splitA)+(-2.4cm,-1.05cm)$);
-    \coordinate (rowBstart) at ($(splitB)+(-0.4cm,-1.05cm)$);
-
-    \TokenWordRow{(rowAstart)}{wordA}{token/wordA}{This,is,a,smart,robot}
-    \TokenWordRow{(rowBstart)}{wordB}{token/wordB}{My,drone,is,smart}
-
-    \coordinate (vocabStart) at ($(wordA-1)+(0,-2.35cm)$);
-    \TokenWordRow{(vocabStart)}{vocab}{token/vocabWord}{This,is,a,smart,robot,My,drone}
-
-    \node[token/annotation] (vocabLabel) at ($(vocab-4)+(0,0.95cm)$) {Create a \textbf{vocabulary}};
-    %\draw[token/arrow] (splitMid) -- (vocabLabel.north);
-    \draw[token/arrow] ($(splitA)+(-2.4cm,-1.5cm)$) -- ($(vocabStart.north)+(0,1cm)$);
-    \draw[token/arrow] ($(splitA)+(5.1cm,-1.6cm)$) -- ($(vocabStart.north)+(7.5cm,1cm)$);
-
-    \draw[token/span] ($(vocab-1.south west)+(0,-0.15cm)$) -- ($(vocab-7.south east)+(0,-0.15cm)$);
-    \node[token/annotation] at ($(vocab-1.south west)!0.5!(vocab-7.south east)+(0,-0.42cm)$) {Vocabulary size};
-  \end{tikzpicture}%
-}
-
-\newcommand{\WordEmbeddingNeighborDiagram}{%
-  \begin{tikzpicture}[font=\small]
-    \node[neighbor/word] (wordDrone) at (0,-1.1) {Drone};
-    \node[neighbor/word] (wordSmart) at (0,-2.5) {Smart};
-
-    \node[neighbor/colLabel] at ($(wordDrone)+(0,1.05cm)$) {Words};
-
-    \coordinate (droneEmbStart) at ($(wordDrone.east)+(.55cm,0)$);
-    \coordinate (smartEmbStart) at ($(wordSmart.east)+(.55cm,0)$);
-
-    \node[neighbor/colLabel] at ($(droneEmbStart)+(1.2cm,1.05cm)$) {Embeddings};
-    \llmEmbeddingBlocksSmall{($(droneEmbStart)+(0.35cm,0)$)}{black}{llmEmbedDroneA, llmEmbedDroneB, llmEmbedDroneD, llmEmbedDroneC, llmEmbedDroneE}
-    \llmEmbeddingBlocksSmall{($(smartEmbStart)+(0.35cm,0)$)}{black}{llmEmbedSmartB, llmEmbedSmartC, llmEmbedSmartE, llmEmbedSmartD, llmEmbedSmartA}
-
-
-    \draw[neighbor/arrow] (wordDrone.east) -- (droneEmbStart.west);
-    \draw[neighbor/arrow] (wordSmart.east) -- (smartEmbStart.west);
-
-    \coordinate (nnMid) at ($(droneEmbStart.east)!0.5!(smartEmbStart-5.east)+(3.7cm,-1.25cm)$);
-    \node[neighbor/nn, anchor=west, minimum height=1.0cm] (network) at ($(nnMid)+(1.45cm,0)$) {Are the two \\ words neighbors?};
-    \node[neighbor/colLabel, anchor=south] at ($(network.north)+(0,0.85cm)$) {Neural network};
-    \draw[neighbor/arrow] ($(nnMid.east)+(0.2cm,-0.8cm)$) -- (network.west);
-    \draw[neighbor/arrow] ($(nnMid.east)+(0.2cm,0.8cm)$) -- (network.west);
-  
-    \node[neighbor/colLabel, anchor=south] at ($(network.north)+(4cm,0.85cm)$) {Prediction};
-    \node[neighbor/prediction, anchor=west] (predictionValue) at ($(network.east)+(1.6cm,0)$) {0.84};
-   \draw[neighbor/arrow] (network.east) -- (predictionValue.west);
-
-    %\node[neighbor/predLabel, anchor=south] at ($(predictionValue)+(0,0.85cm)$) {Model prediction};
-  \end{tikzpicture}%
-}
-
-\newcommand{\VectorRepDiagram}{%
-  \begin{tikzpicture}[font=\small, node distance=0.35cm and 3.4cm]
-
-    
-    
-    \coordinate (splitA) at ($(sentenceA.south)+(0,-0.45cm)$);
-
-   
-    \coordinate (splitMid) at ($(splitA)!0.5!(splitB)$);
-    
-    \coordinate (rowAstart) at ($(splitA)+(-2.4cm,-1.05cm)$);
-    \coordinate (rowBstart) at ($(splitB)+(-0.4cm,-1.05cm)$);
-
-    \TokenWordRow{(rowAstart)}{wordA}{token/wordA}{This,is,a,smart,robot}
-    
-
-    \coordinate (vocabStart) at ($(wordA-1)+(0,-2.35cm)$);
-    \TokenWordRow{(vocabStart)}{vocab}{token/vocabWord}{This,is,a,smart,robot,My,drone}
-    \node[token/bit, below=0.4cm of vocab-1] (bit1) {1};
-    \node[token/bit, below=0.4cm of vocab-2] (bit2) {1};
-    \node[token/bit, below=0.4cm of vocab-3] (bit3) {1};
-    \node[token/bit, below=0.4cm of vocab-4] (bit4) {1};
-    \node[token/bit, below=0.4cm of vocab-5] (bit5) {1};
-    \node[token/bit, below=0.4cm of vocab-6] (bit6) {0};
-    \node[token/bit, below=0.4cm of vocab-7] (bit7) {0};
-  \end{tikzpicture}%
-}
 
 
 
@@ -276,16 +182,16 @@
 
 \begin{frame}{LLM Model Timeline (2000--2024)}
   \centering
-  \colorlet{colDec}{AMU_acc1!50}
-  \colorlet{colEnc}{AMU_acc5}
-  \colorlet{colED}{AMU_lt2!65!AMU_acc5}
-  \colorlet{colNon}{AMU_acc4!85!AMU_lt1}
+  \colorlet{colDec}{AMU_acc1!30}
+  \colorlet{colEnc}{AMU_acc5!85}
+  \colorlet{colED}{AMU_lt2!95}
+  \colorlet{colNon}{AMU_acc4!85}
 
   \begin{tikzpicture}[>=Stealth, thick]
     \tikzset{event/.style={draw=AMU_dk1, rounded corners=2pt, inner xsep=4pt, inner ysep=2pt, font=\footnotesize, align=center}}
 
     % Baseline: dotted before 2017, solid afterwards
-    \draw[dotted, AMU_dk2!35!AMU_lt1] (0,0) -- (2.6,0);
+    \draw[dotted, AMU_dk2!95!AMU_lt1] (0,0) -- (2.6,0);
     \draw[->, AMU_acc1] (2.6,0) -- (10,0);
 
     % Ticks and labels
@@ -320,12 +226,14 @@
     \draw (4.5,0) -- (4.5,1.1);
     \node[event, fill=colEnc, anchor=south] at (4.5,1.1) {BERT};
 
-    \draw (5.3,0) -- (5.3,1.7);
-    \node[event, fill=colEnc, anchor=south] at (5.3,1.7) {RoBERTa};
-
     \draw (5.5,0) -- (5.5,2.25);
     \node[event, fill=colEnc, anchor=south] at (5.5,2.25) {DistilBERT};
 
+
+    \draw (5.3,0) -- (5.3,1.7);
+    \node[event, fill=colEnc, anchor=south] at (5.3,1.7) {RoBERTa};
+
+    
     % Decoder-only
     \draw (4.8,0) -- (4.8,-1.3);
     \node[event, fill=colDec, anchor=north] at (4.8,-1.3) {GPT};
@@ -366,29 +274,217 @@
 
 \begin{frame}{LLM Capabilities}
   \centering
-  \resizebox{!}{0.85\textheight}{\LLMPipelineDiagram}
+  \resizebox{!}{0.85\textheight}{\begin{tikzpicture}[font=\small, node distance=1.3cm and 2.2cm]
+    \node[align=center, font=\bfseries] (inputlabel) {\large Text input\\{\normalsize\color{llmGray} Unstructured data}};
+    \node[llm/input, below=0.4cm of inputlabel] (inputbox) {};
+
+    \llmParagraph{($(inputbox.west)+(0.55cm,0)$)}{6pt}{0.45/4.8cm,0/4.5cm,-0.45/4.2cm}{llmInputAccent}
+
+    \node[llm/core, below=1.5cm of inputbox] (core) {\textcolor{llmCoreTitle}{\bfseries Language AI}\\{\normalsize\color{llmGray} Processes the input text}};
+
+    \draw[llm/arrow] (inputbox.south) -- (core.north);
+
+    \coordinate (split) at ($(core.south)+(0,-0.6cm)$);
+    \draw[llm/arrow] (core.south) -- (split);
+
+    \node[llm/output, below left=2.9cm and 2.2cm of core] (textout) {};
+    \node[llm/outputEmbedding, below=2.9cm of core] (embeddings) {};
+    \node[llm/output, below right=2.9cm and 2.2cm of core] (classify) {};
+
+    \node[align=center, font=\bfseries] at ($(textout.south)+(0,-1.0cm)$) {Text output\\{\normalsize\color{llmGray} Generative modeling}};
+    \node[align=center, font=\bfseries] at ($(embeddings.south)+(0,-1.0cm)$) {Embeddings\\{\normalsize\color{llmGray} Numeric values}};
+    \node[align=center, font=\bfseries] at ($(classify.south)+(0,-1.0cm)$) {Classification\\{\normalsize\color{llmGray} Identify targets}};
+
+    \draw[llm/arrow] (split) -| (textout.north);
+    \draw[llm/arrow] (split) -- (embeddings.north);
+    \draw[llm/arrow] (split) -| (classify.north);
+
+    \llmParagraph{($(textout.west)+(0.4cm,0.4cm)$)}{5pt}{0.3/2.2cm,-0.3/2.2cm,-0.9/2.2cm}{llmTextAccent}
+
+    \llmEmbeddingBlocks{($(embeddings.west)+(0.35cm,0)$)}{black}{llmEmbedD, llmEmbedA,llmEmbedB,llmEmbedC}
+
+    \llmParagraph{($(classify.west)+(0.4cm,0.4cm)$)}{5pt}{0/2.4cm}{llmTextAccent}
+    \llmParagraph{($(classify.west)+(0.4cm,-0.12cm)$)}{5pt}{0/2.1cm,-0.6/2.2cm}{llmGrayLight}
+  \end{tikzpicture}}
 \end{frame}
 
 \begin{frame}{Bagg of words - Whitespace Tokenization}
   \centering
-  \WhitespaceTokenDiagram
+  \begin{tikzpicture}[font=\small, node distance=0.35cm and 3.4cm]
+    \node[token/sentenceLabel] (labelA) {Input};
+    \node[token/sentence, below=0.28cm of labelA] (sentenceA) {This is a smart robot};
+
+    \node[token/sentenceLabel, right=4.6cm of labelA] (labelB) {Input};
+    \node[token/sentence, below=0.28cm of labelB] (sentenceB) {My drone is smart};
+
+    \coordinate (splitA) at ($(sentenceA.south)+(0,-0.45cm)$);
+    \coordinate (splitB) at ($(sentenceB.south)+(0,-0.45cm)$);
+
+    \draw[token/arrow] (sentenceA.south) -- (splitA);
+    \draw[token/arrow] (sentenceB.south) -- (splitB);
+
+    \coordinate (splitMid) at ($(splitA)!0.5!(splitB)$);
+    \node[token/annotation] (splitLabel) at ($(splitMid)+(0,-0.3cm)$) {Split input by a \textbf{whitespace}};
+
+    \coordinate (rowAstart) at ($(splitA)+(-2.4cm,-1.05cm)$);
+    \coordinate (rowBstart) at ($(splitB)+(-0.4cm,-1.05cm)$);
+
+    \TokenWordRow{(rowAstart)}{wordA}{token/wordA}{This,is,a,smart,robot}
+    \TokenWordRow{(rowBstart)}{wordB}{token/wordB}{My,drone,is,smart}
+
+    \coordinate (vocabStart) at ($(wordA-1)+(0,-2.35cm)$);
+    \TokenWordRow{(vocabStart)}{vocab}{token/vocabWord}{This,is,a,smart,robot,My,drone}
+
+    \node[token/annotation] (vocabLabel) at ($(vocab-4)+(0,0.95cm)$) {Create a \textbf{vocabulary}};
+    %\draw[token/arrow] (splitMid) -- (vocabLabel.north);
+    \draw[token/arrow] ($(splitA)+(-2.4cm,-1.5cm)$) -- ($(vocabStart.north)+(0,1cm)$);
+    \draw[token/arrow] ($(splitA)+(5.1cm,-1.6cm)$) -- ($(vocabStart.north)+(7.5cm,1cm)$);
+
+    \draw[token/span] ($(vocab-1.south west)+(0,-0.15cm)$) -- ($(vocab-7.south east)+(0,-0.15cm)$);
+    \node[token/annotation] at ($(vocab-1.south west)!0.5!(vocab-7.south east)+(0,-0.42cm)$) {Vocabulary size};
+  \end{tikzpicture}
   
 \end{frame}
 
 \begin{frame}{Vector representation}
   \begin{center}
-    \VectorRepDiagram
-  \end{center}
-  
+    \begin{tikzpicture}[font=\small, node distance=0.35cm and 3.4cm]
 
+    
+    
+    \coordinate (splitA) at ($(sentenceA.south)+(0,-0.45cm)$);
+
+    
+    \coordinate (rowAstart) at ($(splitA)+(-2.4cm,-1.05cm)$);
+    
+    \TokenWordRow{(rowAstart)}{wordA}{token/wordA}{This,is,a,smart,robot}
+    
+
+    \coordinate (vocabStart) at ($(wordA-1)+(0,-1.85cm)$);
+    \TokenWordRow{(vocabStart)}{vocab}{token/vocabWord}{This,is,a,smart,robot,My,drone}
+    \node[token/bit, below=0.4cm of vocab-1] (bit1) {1};
+    \node[token/bit, below=0.4cm of vocab-2] (bit2) {1};
+    \node[token/bit, below=0.4cm of vocab-3] (bit3) {1};
+    \node[token/bit, below=0.4cm of vocab-4] (bit4) {1};
+    \node[token/bit, below=0.4cm of vocab-5] (bit5) {1};
+    \node[token/bit, below=0.4cm of vocab-6] (bit6) {0};
+    \node[token/bit, below=0.4cm of vocab-7] (bit7) {0};
+  \end{tikzpicture}%
+  \end{center}
   Bag of words is created counting the number of occurrences of each word in the vocabulary.
 \end{frame}
 
-\begin{frame}{Embedding Neighbors Task}
+\begin{frame}{Vector representation}
   \begin{center}
-  \WordEmbeddingNeighborDiagram
+    \begin{tikzpicture}[font=\small, node distance=0.35cm and 3.4cm]
+
+    
+    
+    \coordinate (splitA) at ($(sentenceA.south)+(0,-0.45cm)$);
+
+    
+    \coordinate (rowAstart) at ($(splitA)+(-2.4cm,-1.05cm)$);
+    
+    \TokenWordRow{(rowAstart)}{wordA}{token/wordA}{Is,this,a,smart,robot}
+    
+
+    \coordinate (vocabStart) at ($(wordA-1)+(0,-1.85cm)$);
+    \TokenWordRow{(vocabStart)}{vocab}{token/vocabWord}{This,is,a,smart,robot,My,drone}
+    \node[token/bit, below=0.4cm of vocab-1] (bit1) {1};
+    \node[token/bit, below=0.4cm of vocab-2] (bit2) {1};
+    \node[token/bit, below=0.4cm of vocab-3] (bit3) {1};
+    \node[token/bit, below=0.4cm of vocab-4] (bit4) {1};
+    \node[token/bit, below=0.4cm of vocab-5] (bit5) {1};
+    \node[token/bit, below=0.4cm of vocab-6] (bit6) {0};
+    \node[token/bit, below=0.4cm of vocab-7] (bit7) {0};
+  \end{tikzpicture}%
+  \end{center}
+  Bag of words is created counting the number of occurrences of each word in the vocabulary.
+\end{frame}
+
+
+\begin{frame}{Dense Vector Embeddings - word2vec}
+  \begin{center}
+   \begin{tikzpicture}[font=\small]
+    \node[neighbor/word] (wordDrone) at (0,-1.1) {Drone};
+    \node[neighbor/word] (wordSmart) at (0,-2.5) {Smart};
+
+    \node[neighbor/colLabel] at ($(wordDrone)+(0,1.05cm)$) {Words};
+
+    \coordinate (droneEmbStart) at ($(wordDrone.east)+(.55cm,0)$);
+    \coordinate (smartEmbStart) at ($(wordSmart.east)+(.55cm,0)$);
+
+    \node[neighbor/colLabel] at ($(droneEmbStart)+(1.2cm,1.05cm)$) {Embeddings};
+    \llmEmbeddingBlocksSmall{($(droneEmbStart)+(0.35cm,0)$)}{black}{llmEmbedDroneA, llmEmbedDroneB, llmEmbedDroneD, llmEmbedDroneC, llmEmbedDroneE}
+    \llmEmbeddingBlocksSmall{($(smartEmbStart)+(0.35cm,0)$)}{black}{llmEmbedSmartB, llmEmbedSmartC, llmEmbedSmartE, llmEmbedSmartD, llmEmbedSmartA}
+
+
+    \draw[neighbor/arrow] (wordDrone.east) -- (droneEmbStart.west);
+    \draw[neighbor/arrow] (wordSmart.east) -- (smartEmbStart.west);
+
+    \coordinate (nnMid) at ($(droneEmbStart.east)!0.5!(smartEmbStart.east)+(3.1cm,0.1cm)$);
+    \node[neighbor/nn, anchor=west, minimum height=1.0cm] (network) at ($(nnMid)+(1.45cm,0)$) {Are the two \\ words neighbors?};
+    \node[neighbor/colLabel, anchor=south] at ($(network.north)+(0,0.85cm)$) {Neural network};
+    \draw[neighbor/arrow] ($(nnMid.east)+(0.2cm,-0.8cm)$) -- (network.west);
+    \draw[neighbor/arrow] ($(nnMid.east)+(0.2cm,0.8cm)$) -- (network.west);
+  
+    \node[neighbor/colLabel, anchor=south] at ($(network.north)+(4cm,0.85cm)$) {Prediction};
+    \node[neighbor/prediction, anchor=west] (predictionValue) at ($(network.east)+(1.6cm,0)$) {0.84};
+   \draw[neighbor/arrow] (network.east) -- (predictionValue.west);
+
+    %\node[neighbor/predLabel, anchor=south] at ($(predictionValue)+(0,0.85cm)$) {Model prediction};
+  \end{tikzpicture}
   \end{center}
     The neural network is trained to predict if two words are neighbors (appear in similar contexts).
+\end{frame}
+
+\begin{frame}{Neural Networks}
+    \def\layersep{2.5cm}
+\begin{center}
+    \begin{tikzpicture}[shorten >=1pt,->,draw=black!50, node distance=\layersep]
+    \tikzstyle{every pin edge}=[<-,shorten <=1pt]
+    \tikzstyle{neuron}=[circle,fill=black!25,minimum size=17pt,inner sep=0pt]
+    \tikzstyle{input neuron}=[neuron, fill=AMU_acc5!80];
+    \tikzstyle{output neuron}=[neuron, fill=AMU_acc6!80];
+    \tikzstyle{hidden neuron}=[neuron, fill=AMU_dk2!60];
+    \tikzstyle{annot} = [text width=4em, text centered]
+
+    % Draw the input layer nodes
+    \foreach \name / \y in {1,...,4}
+    % This is the same as writing \foreach \name / \y in {1/1,2/2,3/3,4/4}
+        \node[input neuron, pin=left:Input \#\y] (I-\name) at (0,-\y) {};
+
+    % Draw the hidden layer nodes
+    \foreach \name / \y in {1,...,5}
+        \path[yshift=0.5cm]
+            node[hidden neuron] (H-\name) at (\layersep,-\y cm) {};
+
+    % Draw the output layer node
+    \node[output neuron,pin={[pin edge={->}]right:Output}, right of=H-3] (O) {};
+
+    % Connect every node in the input layer with every node in the
+    % hidden layer.
+    \foreach \source in {1,...,4}
+        \foreach \dest in {1,...,5}
+            \path (I-\source) edge (H-\dest);
+
+    % Connect every node in the hidden layer with the output layer
+    \foreach \source in {1,...,5}
+        \path (H-\source) edge (O);
+
+    % Annotate the layers
+    \node[annot,above of=H-1, node distance=1cm] (hl) {Hidden layer};
+    \node[annot,left of=hl] {Input layer};
+    \node[annot,right of=hl] {Output layer};
+\end{tikzpicture}
+\end{center}
+The neural network learns the weights of the connections to optimize its predictions.
+\end{frame}
+
+\begin{frame}
+\begin{center}
+    
+\end{center}
 \end{frame}
 
 
